# Transport-Management-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/action/setup-hurl/: action.yaml
.github/actions/setup/: action.yaml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 6d30dda6a76f_create_vehicle_table.py  9e55454deeee_initial_migration_create_vendor_table.py  d983046b66a7_add_users_table.py  f8a3167fb4fd_create_vehicle_table.py
scripts/: cleanup_data.hurl  run-ci.py  seed_data.hurl
src/: main.py
src/api/: base.py  deps.py
src/api/v1/: __init__.py  auth.py  user.py  vehicle.py  vendor.py
src/core/: __init__.py  config.py  db.py  logging.py  security.py
src/middleware/: request_id.py  security.py
src/models/: __init__.py  user.py  vehicle.py  vendor.py
src/repositories/: user.py  vehicle.py  vendor.py
src/schemas/: user.py  vehicle.py  vendor.py
src/services/: user_services.py  vehicle_service.py  vendor_service.py
src/utils/: sanitizers.py
tests/: conftest.py  test_health.py  test_vehicle_service.py  test_vendor_api.py  test_vendor_service.py
tests/hurl/: 01_health_checks.hurl  02_vendor_crud.hurl  03_performance.hurl  04_vehicle_crud.hurl
