[project]
name = "transport-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "email-validator>=2.1.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "gunicorn>=25.1.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.11.0",
    "pyright[nodejs]>=1.1.403",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.17.0",
    "httpx>=0.24.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "ruff>=0.12.8",
    "tomli>=2.2.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-v",
    # "--cov=src",
    # "--cov-report=term-missing",
]
pythonpath = "."
